# diesel_demo

./: Cargo.toml
migrations/2022-04-07-061708_create_posts/: up.sql
migrations/2022-04-08-085025_create_user/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
